--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "clsx": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
     "redux-form": "^8.3.0"
   },
   "scripts": {
